--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,7 @@
     width: 100%;
 }
 
-section {
-    width: 100%;
-}
+
 
 .bg-color {
     background: rgba(30, 113, 255, 1);
@@ -67,6 +65,11 @@ section {
 
 
 }
+.col-6 {
+    width: 50%;
+    padding-left: 12px;
+    padding-right: 12px;
+}
 
 .position-relative {
     position: relative;
@@ -109,7 +112,7 @@ section {
     letter-spacing: -0.02em;
     text-align: left;
     color: rgba(255, 255, 255, 1);
-    padding-top: 35px;
+
 }
 
 .logo>span {
@@ -120,7 +123,7 @@ section {
     letter-spacing: -0.02em;
     text-align: left;
     color: rgba(255, 255, 255, 1);
-    padding-left: -5px;
+
 }
 
 .icons {
@@ -258,6 +261,7 @@ section {
 
 .bg-color1 {
     background-color: #E9F1FF;
+    width: 100%;
 }
 
 .heading3 {
@@ -286,7 +290,8 @@ section {
    
         
     padding-top: 130px;
-    padding-right: 100px;
+    
+    padding-bottom: 137px;
 
 }
 
@@ -344,7 +349,7 @@ section {
     letter-spacing: -0.02em;
     text-align: left;
     color: rgba(30, 113, 255, 1);
-    padding-left: -5px;
+    
 }
 
 .pt-90 {
@@ -386,6 +391,18 @@ section {
     margin-bottom: 30px;
 
 }
+.menu {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    z-index: 5;
+    position: sticky;
+    background: rgba(30, 113, 255, 1);
+
+}
 
 .mb-24 {
     margin-bottom: 24px;
@@ -402,7 +419,7 @@ section {
         justify-content: space-between;
         cursor: pointer;
         position: relative;
-        z-index: 1;
+        z-index: 2;
 
     }
 
@@ -428,6 +445,7 @@ section {
         top: 0%;
         right: -100%;
         transition: all 200ms linear;
+        z-index: 1;
     }
 
 
@@ -437,14 +455,18 @@ section {
         background-color: rgba(30, 113, 255, 1);
         width: 100%;
     }
+        
 
-    ul {
+    .flex-column {
         flex-direction: column;
     }
 
     .image {
         width: 100%;
        
+    }
+    .logo{
+        z-index: 2;
     }
 
 
@@ -478,24 +500,23 @@ section {
     .chatpage {
         width: 100%;
     }
-
+    .groupimage{
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+.heading3{
+    padding-top: 0;
+}
 
     .image {
         width: 100%;
         
     }
-        .groupimage {
-            width: 100%;
-        }
-    
+         
 
 }
 
-.col-6 {
-    width: 50%;
-    padding-left: 12px;
-    padding-right: 12px;
-}
+
 
 @media (min-width:576px) {
     .col-sm-4 {
@@ -503,7 +524,8 @@ section {
         padding-left: 12px;
         padding-right: 12px;
     }
-
+        
+        
 
 }
 
@@ -515,6 +537,8 @@ section {
         padding-left: 12px;
         padding-right: 12px;
     }
+       
+    
 
 }
 
@@ -530,6 +554,11 @@ section {
         padding-left: 12px;
         padding-right: 12px;
     }
+        .col-lg-5 {
+            width: 41.66%;
+            padding-left: 12px;
+            padding-right: 12px;
+        }
 
     .col-lg-6 {
 
@@ -538,12 +567,15 @@ section {
         padding-right: 12px;
 
     }
+        .groupimage {
+            left: 0;
+            transform: translatey(-50%);
+            position: absolute;
+            width: 50%;
+            height: 100%;
+            top: 50%;
+    
+        }
 
-    .groupimage {
-        left: 0;
-        transform: translatey(-50%, -50%);
-        position: absolute;
-        width: 50%;
-
-    }
+   
 }
