update chat app page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,9 @@
     padding-top: 40px;
     padding-bottom: 40px;
 }
+.pb-24{
+    padding-bottom: 24px;
+}
 
 .logo {
     font-family: "Poppins", sans-serif;
@@ -173,7 +176,7 @@
     padding: 12px 24px;
     background-color: #4B8DFF;
     border: 0;
-    background: rgba(255, 255, 255, 1);
+    background: #E9F1FF;
     color: rgba(30, 113, 255, 1);
     white-space: nowrap;
     border: 1px solid rgba(30, 113, 255, 1);
